# cursor

./: .env.ollama  .flake8  .gitignore  .pre-commit-config.yaml  AI_AGENT_SYSTEM_SPECS.md  CURRENT_SESSION_STATUS.md  CURSOR_LLM_BRIDGE_STATUS_REPORT.md  FAST_COORDINATOR_SUCCESS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  LOCAL_LLM_SUCCESS_REPORT.md  MCP_Server_Guide.md  OPTIMIZATION_PLAN.md  PHASE_10_1_TEST_REPORT.md  PHASE_10_2_PERFORMANCE_REPORT.md  PHASE_10_3_SECURITY_REPORT.md  PHASE_10_5_DASHBOARD_REPORT.json  PHASE_10_6_VUE3_PROMPT_SEQUENCE.md  PHASE_10_7_AUTOGEN_BREAKTHROUGH_SUMMARY.md  README.md  REPOSITORY_CLEANUP_ANALYSIS.md  ROLLBACK_AND_REBUILD_PLAN.md  SECURITY_IMPROVEMENT_PLAN.md  analyze_tools.py  config.env.example  dashboard_agent_test.py  debug_burndown_velocity.py  debug_intent_analysis.py  debug_velocity_only.py  demo_memory_coordinator.py  docker-compose.yml  fixed_dashboard_agent_service.py  phase9_4_test_results_20250905_153624.json  phase9_4_test_results_20250905_153736.json  phase9_complete_test_results_20250905_153956.json  phase9_test_results_20250905_152149.json  phase9_test_results_20250905_152300.json  protocol_server.py  protocol_server.py.backup  pyproject.toml  (+29 more)
docs/: MEMORY_ENHANCED_COORDINATOR_GUIDE.md  README.md  phase4_communication.md
docs/development/: GIT_WORKFLOW.md  VSCODE_SETUP.md
docs/guides/: README_ENHANCED.md
docs/implementation/: AI_AGENT_SYSTEM_SPECS.md  AI_SYSTEM_PROJECT_TICKETS.md  BIDIRECTIONAL_KNOWLEDGE_BRIDGE.md  COORDINATOR_SETTINGS_FEATURE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  PHASE_10_7_COORDINATOR_FIX.md  PHASE_10_7_DAY2_SUCCESS.md  PHASE_10_7_PROCESS_GUIDE.md  PHASE_10_7_TESTING_LOG.md  PHASE_8_DASHBOARD_PLAN.md  PHASE_8_QUICK_REFERENCE.md  development_lifecycle_memory.md
docs/plans/: REPOSITORY_CLEANUP_PLAN.md  SECURITY_IMPROVEMENT_PLAN.md
docs/reports/: CURRENT_SESSION_STATUS.md  PHASE_10_1_TEST_REPORT.md  (+3 more)
models/: README.md  manage_models.py  setup_local_llm.sh
scripts/: dev.sh  manage-ollama.sh  setup-models.sh
src/: __init__.py  llm_fallback.py
test_prompts/: FINAL_COMPREHENSIVE_TESTING_GUIDE.md  MASTER_TESTING_FRAMEWORK.md  PHASE_5_4_TESTING_SUMMARY.md  QUICK_REFERENCE_ALL_PHASES.md  README.md  test_prompts_natural_language.md  test_prompts_natural_quick.md
tests/: README.md  run_all_tests.py  test_phase2_infrastructure.py  test_phase3_coordinator.py
(+157 files in other folders)
