[tool.poetry]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for Cursor"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.13"
mcp = "^1.13.1"
websockets = "^12.0"
redis = "^5.0.1"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
requests = "^2.32.5"
# Phase 2: AutoGen + Qdrant + LLM Integration
pyautogen = "^0.2.0"
qdrant-client = "^1.7.0"
sentence-transformers = "^2.5.1"
numpy = "^1.26.0"
openai = "^1.52.0"
httpx = "^0.27.0"
aiohttp = "^3.12.15"
docker = "^7.1.0"
psutil = "^7.0.0"
# Security dependencies
python-dotenv = "^1.0.0"
slowapi = "^0.1.9"
cryptography = "^43.0.0"
pyjwt = "^2.9.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pre-commit = "^4.3.0"
types-requests = "^2.32.4.20250809"
types-psutil = "^7.0.0.20250822"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
